--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -11,7 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <title>Frontend Mentor | Order summary card</title>
 
