--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -18,16 +18,13 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
-    <section class="qr">
-      <img
-        src="../qr-code-component-main/images/image-qr-code.png"
-        alt="imazh"
-      />
+    <section>
+      <img src="../qr-code-component-main/images/image-qr-code.png" alt="" />
 
       <h1>Improve your coding skills by building projects</h1>
       <p>
-        Scane the QR code to visit the frontend mentor <br />and take your
-        coding skills to the next level.
+        Scane the QR code to visit the frontend mentor and take your coding
+        skills to the next level.
       </p>
     </section>
   </body>
