--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -26,12 +26,17 @@
     <h1>Order Summary</h1>
 
     <p class="kot">
-      You can now listen to millions of songs,<br> audiobooks, and podcasts <br>on any
-      device anywhere you like!
+      You can now listen to millions of songs,<br />
+      audiobooks, and podcasts <br />on any device anywhere you like!
     </p>
 
     <section class="payment">
       <p class="annualPlan">
+        <img
+          src="../order-summary-component-main/images/icon-music.svg"
+          alt=""
+        />
+
         Annual Plan <br />
         $59.99/year
       </p>
