--- a/order-summary-component-main/index.html
+++ b/order-summary-component-main/index.html
@@ -23,6 +23,7 @@
       src="../order-summary-component-main/images/illustration-hero.svg"
       alt="illustration-hero"
     />
+
     <h1>Order Summary</h1>
 
     <p class="kot">
@@ -44,8 +45,7 @@
     </section>
 
     <button>Proceed to payment</button>
-    <button class="cancel">cancel order</button>
-
+    <button type="reset" class="cancel">cancel order</button>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
